css/style.css
/* COMMON  */
:root{
    --white: #ffffff;
    --black: #000000;
    --light-cyan-blue: #b4d0e7;
    --azure: #0061ff;
    --butter-lattuce: #d1e9cd;
    --pistachio-green: #a2d39b;
    --burgundy: #61082b;
    --electric-blue: #0093ce;
    --vivid-red: #ff1c1c;
    --crimson: #d5001f;
    --navy: #0d2481;
    --sprint-yellow: #ffd830;
    --light-gray: #999999;
}
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    background-color: var(--white);
    font-family: Arial, Helvetica, sans-serif;
}
.container{
    max-width: 1200px;
    margin: 0 auto;
}
.container-small{
    max-width: 1000px;
    margin: 150px auto;

}
.d-flex{
    display: flex;
}
.w-30{
    width: 30%;
    padding-top: 60px;
}
.w-70{
    width: 70%;
    padding-top: 60px;
}

/* HEADER  */
.flexbox{
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: center;
}

header nav{
    width: 100%;
    height: 80px;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000px;
    background-color: var(--white)
}
header nav li{
    list-style: none;
    padding: 0 20px;
}
header nav li a{
    text-decoration: none;
    color: var(--black);
    font-size: 16px;
}

.btn-nav{
    width: 70px;
    height: 35px;
    background-color: var(--azure);
    color: var(--white);
    border: none;
    font-size: 16px;
}

#hero{
    background-color: var(--light-cyan-blue);
    padding-top: 80px;
}

#hero .container{
    position: relative;
    bottom: -80px;
}

#hero img{
    width: 100%;
}

h1{
    font-size: 76px;
    font-weight: 800;
}

.btn-hero{
    width: 225px;
    height: 45px;
    background-color: var(--azure);
    color: var(--white);
    border: none;
    font-size: 16px;
    margin: 30px 0;
}

#hero p{
    font-size: 16px;
    line-height: 1.4;
}

.arrow{
    font-size: 45px;
    padding-top: 75px;
}
/* FOOTER  */

footer{
    background-color: var(--black);
    color: var(--white);
}

